[package]
name = "clock"
version = "0.1.0"
edition = "2021"
authors = ["Arnaud Lustrat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
crossterm = "0.27.0"
ctrlc = "3.4.2"
